feat: Implement scraping service and Alembic migrations
This commit introduces the following changes:

- **Scraping Service:**
  - Implemented the core scraping logic in `backend/app/scraping.py` to fetch and process articles from configured sources.
  - Fixed a bug where the `summary` field was not correctly handled during article creation.
  - Updated `backend/app/schemas.py` and `backend/app/models.py` to support the new scraping features, including `scraper_type` and `config` for sources.
  - Refactored `backend/tests/test_scraping.py` to include comprehensive tests for the scraping functionality.

- **Database Migrations (Alembic):**
  - Integrated Alembic into the backend to manage database schema changes.
  - Added `alembic` to `backend/requirements.txt`.
  - Configured Alembic and generated the initial migration script.
  - Added `backend/.gitignore` to ignore database files and Python cache.

- **Documentation & Cleanup:**
  - Updated `README.md` to reflect the current status of the project and link to the new Knowledge Graph.
  - Removed outdated plan documents (`FRONTEND_PLAN.md`, `LLM_INTEGRATION_PLAN.md`, `SCRAPING_SERVICE_PLAN.md`).

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 fastapi
 uvicorn[standard]
 sqlalchemy
+alembic
 requests
 beautifulsoup4
 python-dotenv
@@ -10,3 +11,5 @@ httpx
 pytest
 pytest-asyncio
 pytest-mock
+requests-mock
+lxml
